Added few sections

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,16 +1,16 @@
 <header class="header">
   <div class="header__container container">
-    <div class="logo">
-      <img src="@img/icons/logo.svg" alt="" class="logo__img" />
-      <div class="logo__text">
-        <h6 class="logo__title">Deep</h6>
-        <p class="logo__subtitle">Dash</p>
-      </div>
-    </div>
+    <img src="@img/icons/logo.svg" alt="" class="logo__img" />
     <div class="socials">
-      <img src="@img/icons/icon-fb.svg" alt="" class="socials__icon" />
-      <img src="@img/icons/icon-tw.svg" alt="" class="socials__icon" />
-      <img src="@img/icons/icon-inst.svg" alt="" class="socials__icon" />
+      <a href="" class="socials__link link-reset"
+        ><img src="@img/icons/icon-fb.svg" alt="" class="socials__icon"
+      /></a>
+      <a href="" class="socials__link link-reset"
+        ><img src="@img/icons/icon-tw.svg" alt="" class="socials__icon"
+      /></a>
+      <a href="" class="socials__link link-reset"
+        ><img src="@img/icons/icon-inst.svg" alt="" class="socials__icon"
+      /></a>
     </div>
   </div>
 </header>
