--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -1,5 +1,5 @@
 <section class="hero" id="hero">
-  <div class="container">
+  <div class="hero__container container">
     <div class="hero__banner">
       <h6 class="hero__uptitle uptitle">We&rsquo;re Creative</h6>
       <h1 class="hero__title title">Digital Agency</h1>
@@ -11,5 +11,6 @@
         <span class="btn__text">Get Started</span>
       </button>
     </div>
+    <img src="@img/hero/hero-bg-full.jpeg" alt="" class="hero__img" />
   </div>
 </section>
