--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
   @@include('html/head.html',{ "title":"Deep" })
   <body>
     @@include('html/header.html',{})
-    <main>@include('html/hero.html')</main>
+    <main>
+      @@include('html/hero.html', {}) @@include('html/about.html', {})
+      @@include('html/services.html', {})
+    </main>
     @@include('html/footer.html',{})
     <script src="js/app.min.js"></script>
   </body>
