Added several seections

--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -11,6 +11,6 @@
         <span class="btn__text">Get Started</span>
       </button>
     </div>
-    <img src="@img/hero/hero-bg-full.jpeg" alt="" class="hero__img" />
+    <img src="@img/hero/hero-bg.jpeg" alt="" class="hero__img" />
   </div>
 </section>
