--- a/src/html/services.html
+++ b/src/html/services.html
@@ -1,43 +1,55 @@
 <section class="services" id="services">
   <div class="services__container container">
     <div class="services__banner">
-      <h6 class="services__uptitle uptitle">Who we&nbsp;are</h6>
+      <h6 class="services__uptitle uptitle">What we do</h6>
       <h1 class="services__title title">Our Services</h1>
+      <div class="services__items">
+        <div class="services__item">
+          <img src="@img/icons/volume.svg" alt="" class="services__icon" />
+          <p class="services__subtitle subtitle">Online Marketing</p>
+          <p class="services__descr">
+            The internet has transformed business marketing. It&nbsp;is&nbsp;the
+            heart of our company.
+          </p>
+        </div>
+        <div class="services__item">
+          <img src="@img/icons/layout.svg" alt="" class="services__icon" />
+          <p class="services__subtitle subtitle">Web Development</p>
+          <p class="services__descr">
+            Web development is&nbsp;the work involved in&nbsp;developing
+            a&nbsp;Web site for the Internet.
+          </p>
+        </div>
+        <div class="services__item">
+          <img src="@img/icons/heart.svg" alt="" class="services__icon" />
+          <p class="services__subtitle subtitle">Website Design</p>
+          <p class="services__descr">
+            Web design refers to&nbsp;the design of&nbsp;websites that are
+            displayed on&nbsp;the internet.
+          </p>
+        </div>
+        <div class="services__item">
+          <img src="@img/icons/search.svg" alt="" class="services__icon" />
+          <p class="services__subtitle subtitle">SEO Optimization</p>
+          <p class="services__descr">
+            SEO is&nbsp;the process of&nbsp;improving the quality and quantity
+            of&nbsp;website traffic to&nbsp;a&nbsp;website.
+          </p>
+        </div>
+      </div>
     </div>
-    <div class="services__items">
-      <div class="services__item">
-        <img src="@img/icons/volume.svg" alt="" class="services__icon" />
-        <p class="services__subtitle">Online Marketing</p>
-        <p class="services__descr">
-          The internet has transformed business marketing. It&nbsp;is&nbsp;the
-          heart of our company.
-        </p>
-      </div>
-      <div class="services__item">
-        <img src="@img/icons/layout.svg" alt="" class="services__icon" />
-        <p class="services__subtitle">Web Development</p>
-        <p class="services__descr">
-          Web development is&nbsp;the work involved in&nbsp;developing
-          a&nbsp;Web site for the Internet.
-        </p>
-      </div>
-      <div class="services__item">
-        <img src="@img/icons/heart.svg" alt="" class="services__icon" />
-        <p class="services__subtitle">Website Design</p>
-        <p class="services__descr">
-          Web design refers to&nbsp;the design of&nbsp;websites that are
-          displayed on&nbsp;the internet.
-        </p>
-      </div>
-      <div class="services__item">
-        <img src="@img/icons/search.svg" alt="" class="services__icon" />
-        <p class="services__subtitle">SEO Optimization</p>
-        <p class="services__descr">
-          SEO is&nbsp;the process of&nbsp;improving the quality and quantity
-          of&nbsp;website traffic to&nbsp;a&nbsp;website.
-        </p>
-      </div>
+
+    <div class="services__images">
+      <img
+        src="@img/services/services-1.png"
+        alt=""
+        class="services__img services__img_first"
+      />
+      <img
+        src="@img/services/services-2.png"
+        alt=""
+        class="services__img services__img_second"
+      />
     </div>
-    <img src="@img/services/services.jpeg" alt="" class="services__img" />
   </div>
 </section>
