--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     @@include('html/header.html',{})
     <main>
       @@include('html/hero.html', {}) @@include('html/about.html', {})
-      @@include('html/services.html', {})
+      @@include('html/services.html', {}) @@include('html/works.html', {})
+      @@include("html/team.html", {})
     </main>
     @@include('html/footer.html',{})
     <script src="js/app.min.js"></script>
