--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,1 +1,8 @@
-<footer></footer>
+<footer class="footer">
+  <div class="footer__container container">
+    <small class="copyright">&copy;&nbsp;Deep Dash 2021</small>
+    <button class="up-btn btn-reset">
+      <img src="@img/icons/up.svg" alt="" class="up-btn__img" />
+    </button>
+  </div>
+</footer>
