--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <main>
       @@include('html/hero.html', {}) @@include('html/about.html', {})
       @@include('html/services.html', {}) @@include('html/works.html', {})
-      @@include("html/team.html", {})
+      @@include("html/team.html", {}) @@include('html/contact.html', {})
     </main>
     @@include('html/footer.html',{})
     <script src="js/app.min.js"></script>
