Started adaptive.scss

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -15,6 +15,8 @@
         holistic and durable solutions.
       </p>
     </div>
-    <img src="@img/about/about.jpeg" alt="" class="about__img" />
+    <div class="about__item">
+      <img src="@img/about/about.jpeg" alt="" class="about__img" />
+    </div>
   </div>
 </section>
