--- a/src/html/team.html
+++ b/src/html/team.html
@@ -1,7 +1,7 @@
 <section class="team">
   <div class="team__container container">
-    <h6 class="team__uptitle uptitle">Our team</h6>
-    <h1 class="team__title title">Portfolio</h1>
+    <h6 class="team__uptitle uptitle">Meet the staff</h6>
+    <h1 class="team__title title">Our Team</h1>
     <div class="gallery">
       <div class="gallery__item">
         <img src="@img/team/team-1.jpg" alt="" class="gallery__img" />
