--- a/src/html/works.html
+++ b/src/html/works.html
@@ -3,10 +3,18 @@
     <h6 class="works__uptitle uptitle">Our works</h6>
     <h1 class="works__title title">Portfolio</h1>
     <div class="gallery">
-      <img src="@img/portfolio/portfolio-1.svg" alt="" class="gallery__img" />
-      <img src="@img/portfolio/portfolio-2.svg" alt="" class="gallery__img" />
-      <img src="@img/portfolio/portfolio-3.svg" alt="" class="gallery__img" />
-      <img src="@img/portfolio/portfolio-4.svg" alt="" class="gallery__img" />
+      <div class="gallery__item">
+        <img src="@img/portfolio/work-1.jpg" alt="" class="gallery__img" />
+      </div>
+      <div class="gallery__item">
+        <img src="@img/portfolio/work-2.jpg" alt="" class="gallery__img" />
+      </div>
+      <div class="gallery__item">
+        <img src="@img/portfolio/work-3.jpg" alt="" class="gallery__img" />
+      </div>
+      <div class="gallery__item">
+        <img src="@img/portfolio/work-4.jpg" alt="" class="gallery__img" />
+      </div>
     </div>
   </div>
 </section>
